--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0",
 
   "description": "Adds a toolbar button to redirect users from steemit.com to palnet.io",
-  "homepage_url": "https://www.palnet.io",
+  "homepage_url": "https://www.palnet.io/palnet/@ausbitbank/palnetify-easily-switch-to-palnet-io-from-other-steem-ui-s",
   "icons": {
     "16":"icons/16x16.png",
     "32":"icons/32x32.png",
